@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-18T08:11:19Z",
-  "count_outdated" : 404,
-  "uniques_outdated" : 23,
-  "count" : 419,
+  "timestamp" : "2022-06-19T00:50:21Z",
+  "count_outdated" : 407,
+  "uniques_outdated" : 24,
+  "count" : 421,
   "uniques" : 29,
   "views" : [
-    {
-      "timestamp": "2022-06-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
