@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 14,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
